style.css
/* ... */
/* ---------------------------------------------------- Projects -------------------------------------------- */


/* --------------------------------------------------- Tech Incons ------------------------------------------- */
/* https://www.w3schools.com/css/css_tooltip.asp */

.tech-icon {
    display: inline-block;
    position: relative;
}

.tech-icon > img {
    max-width: 1.5rem;
    height: 100%;
    width: 100%;

    aspect-ratio: 1;
    display: inline-block;

    padding: 15%;
}

.tech-icon > p {
    visibility: hidden;

    position: absolute;
    top: 102%;
    left: 50%;
    text-align: center;
    transform: translateX(-50%);
    
    min-width: max-content;
    text-wrap: nowrap;

    background: var(--transCol);
    backdrop-filter: blur(0.1em);
    border-radius: 0.2em;
    padding: 0.2em;
    line-height: 1;
    margin: 0;
}

.tech-icon > p::after {
    content: " ";

    position: absolute;
    bottom: 100%;
    left: 50%;
    transform: translateX(-50%);

    border-width: 0.25em;
    border-style: solid;
    border-color: transparent transparent var(--transCol);
    backdrop-filter: blur(0.1em);
}

.tech-icon:hover p {
    visibility: visible;
}


.tech-icon-bar {
    display: flex; 
    flex-direction: row; 

    justify-content: space-evenly; 
    align-content: space-around; 
    gap:0.2em;
}


/* -------------------------------------------------- Project Descriptor -------------------------------------- */

.project-page {
    display: flex;
    flex-wrap: wrap;
    
    gap: 2em;
    
    justify-content: center;
    gap: 2.5em;
    align-content: flex-start;
}

.project-page > .container > p {
    opacity: 0.5;
    padding-left: 1em;
    vertical-align: middle;
}

.project-keyword-list {
    opacity: 0.5; 
    padding-left: 1em;

    grid-area: b;
    align-self: start;
}

.project-layout > .project-keyword-list > p {
    display: block;
    margin: 0;
    padding: 0 0 0.5em 0;
}

.project-layout > details {
    grid-area: d;
    margin: 0.75rem;
}


.project-layout {
    display: grid;
    grid-template-columns: auto;
    grid-template-areas:
    "a a a a b b b b"
    "a a a a b b b b"
    "x x x x y y y y"
    "c c c c d d d d"
    "c c c c d d d d";

    min-width: 29rem;
}

.project-layout > .itch-thumbnail {
    grid-area: a;
    align-self: start; 
    padding-right: 1em;
}

/* Only change project layout on inspect, if supported and on desktop */
@supports selector(:has(~ details[open])) {
    @media (min-aspect-ratio: 1/1){ 
        .project-keyword-list:has(~ details[open]) {
            grid-area: a;
            align-self: center;
        }    
        
        .project-layout > details[open] {
            grid-area: b;
        } 
    }  
}


@media (max-aspect-ratio: 1/1) {
    /* Thumbnail size */
    .project-layout {
        width: 80vw;
    }

    .project-layout > .itch-thumbnail{
        align-self: center;
        justify-self: center;
        
        padding: 1em;

        width: 60vw;
        height: 60vw;
        object-fit: cover;
    }

    .project-layout > .itch-thumbnail > a > div > img{
        object-fit: cover;
        width: 60vw;
        height: 60vw;
    }


    /* Layout */
    .project-layout > details {
        grid-area: c;
    }

    .project-layout > .project-keyword-list {
        grid-area: x;
        align-self: end;
    }

    .project-layout > .project-keyword-list > p {
        display: inline-block;
        padding: 0 0.5em 0 0.5em;
        margin: 0;
        text-wrap: nowrap;
        text-align: center;
    }
}

/* ------------------------------------------------ Thumbnails ----------------------------------------- */

/* -------------------------------------- Itch.io ------------------------------------------------------- */

.itch-thumbnail {
    /* Nothing to declare here, I guess */
}
.itch-thumbnail > a > div {
    position: relative;
}

.itch-thumbnail > a > div > img {
    border-radius: 2em;
}

.itch-thumbnail > a:hover > div > img
{
    transition: 0.3s;

    transform: perspective(25rem) translateZ(-1em) rotateX(15deg) translateZ(1em);
    scale: 1.075;
    filter: drop-shadow(0em 1.5em 2em rgba(0,0,0,0.75));

    border-radius: 1.5em 1.5em 2em 2em;
}

.itch-thumbnail > a:not(hover) > div > img
{
    transition: 0.3s;
}

.itch-thumbnail a > div > h4 {
    position: absolute;
    bottom: 10%; 
    left: 50%; 
    transform: translateX(-50%);

    margin: 0;
    padding:0.5em; 
    border-radius: 1em;

    background-color: var(--transCol); 
}

.itch-thumbnail a:hover > div > h4 {
    transition: 0.3s;

    bottom: 25%;
    filter: drop-shadow(0 1em 1em black);
    scale: 1.1;
}

.itch-thumbnail a:not(hover) > div > h4 {
    transition: 0.3s;
}


/* ------------------------------------ Youtube --------------------------------------------------- */
/* https://internetzkidz.de/2021/03/youtube-thumbnail-url/ */

.youtube-thumbnail {
    padding: 0.5em;
}

.youtube-thumbnail > a {
    text-align: center;
}

.youtube-thumbnail > a > div {
    position: relative;
    max-width: fit-content;
}

.youtube-thumbnail > a > div > img {
    border-radius: 2em;
    filter: blur(0.05em);
}

.youtube-thumbnail > a:hover > div > img
{
    transition: 0.3s;

    transform: perspective(25rem) translateZ(-1em) rotateX(15deg) translateZ(1em);
    scale: 1.075;
    filter: drop-shadow(0em 1.5em 2em rgba(0,0,0,0.75));

    border-radius: 1.5em 1.5em 2em 2em;
}

.youtube-thumbnail > a:not(hover) > div > img
{
    transition: 0.3s;
}

.youtube-thumbnail > a:hover > div > h4
{
    transition: 0.3s;

    filter: drop-shadow(0 1em 1em black);
    transform: translate(-50%, -50%) scale(1.2);
}

.youtube-thumbnail > a:not(hover) > div > h4
{
    transition: 0.4s;
}

.youtube-thumbnail > a:hover > div > img ~ img {
    transition: 0.3s;

    position: absolute;
    top:50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1.2);
    margin: 0;
    border-radius: 0;
}
/* ... */

